modified the website

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,11 @@
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/<database-name>?retryWrites=true&w=majority
-JWT_SECRET=your_jwt_secret_here
+MONGODB_URI_USERS=mongodb://localhost:27017/abcclub_users
+MONGODB_URI_HACKATHON=mongodb://localhost:27017/abcclub_hackathon
+JWT_SECRET=abc_club_secret_key_2024
 PORT=5000
+EMAIL_USER=abcclub.icfaitech@ifheindia.org
+EMAIL_APP_PASSWORD=abcclub2024
 EMAIL_PASSWORD=your_gmail_app_password_here
 FRONTEND_URL=http://localhost:5173 
+CLOUDINARY_CLOUD_NAME=dkfctgjjr
+CLOUDINARY_API_KEY=535326724649748
+CLOUDINARY_API_SECRET=IWwlxjaVabjVFe1l8f1MEKPuMq0
