--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase
 on:
   push:
     branches:
-      - main  # Runs when you push code to 'main' branch
+      - main
 
 jobs:
   deploy:
@@ -16,17 +16,22 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Use the required Node.js version
+          node-version: 18
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
+
+      - name: Initialize Firebase (if needed)
+        run: |
+          # Only run this if you don't have firebase.json in your repo
+          # firebase init hosting
 
       - name: Authenticate with Firebase
         env:
           FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         run: |
-          echo "$FIREBASE_SERVICE_ACCOUNT_KEY" > firebase-key.json
-          export GOOGLE_APPLICATION_CREDENTIALS=firebase-key.json
+          echo "$FIREBASE_SERVICE_ACCOUNT_KEY" > service-account.json
+          export GOOGLE_APPLICATION_CREDENTIALS=service-account.json
 
       - name: Deploy to Firebase
         run: firebase deploy --project abc-club-204c1 --only hosting
